Basic draft of debugging support for whole scraping sequence or individual steps